--- a/index.html
+++ b/index.html
@@ -16,35 +16,17 @@
     </style>
 </head>
 <body>
-    <div class="profile-container">
-        <div class="dato">
-            <p class="label">Nombre: </p>
-            <p id="nombre"></p>
-        </div>
-        <div class="dato">
-            <p class="label">Cédula:</p>
-            <p id="cedula"></p>
-        </div>
-        <div class="dato">
-            <p class="label">Provincia: </p>
-            <p id="provincia"></p>
-        </div class="dato">
-        <div class="dato">
-            <p class="label">Cantón:</p>
-            <p id="canton"></p>
-        </div>
-        <div class="dato">
-            <p class="label">Distrito:</p>
-            <p id="distrito"></p>
-        </div>
-        <div class="dato">
-            <p class="label">Direccion:</p>
-            <p id="direccion"></p>
-        </div>
-        <div class="dato">
-            <p class="label">Codigo Postal:</p>
-            <p id="codigo"></p>
-        </div>
+        <table id="tabla" border="1/2" cellspacing="1" cellpadding="4">
+            <tr>
+                <th>Cedula</th>
+                <th>Nombre</th>
+                <th>Provincia</th>
+                <th>Canton</th>
+                <th>Distrito</th>
+                <th>Direccion</th>
+                <th>Codigo postal</th>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
